use universal selector to change the background color of the entire page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 * {
-    color: white;
+    background-color: rgb(241, 219, 190);
 }
 
 /* Style the links inside the navigation bar */
@@ -10,16 +10,17 @@
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    background-color: rgb(211, 154, 154);
   }
   
   /* Change the color of links on hover */
   .topnav a:hover {
-    background-color: #ddd;
+    background-color: rgb(230, 116, 116);
     color: black;
   }
   
   /* Add a color to the active/current link */
   .topnav a.active {
-    background-color: #04AA6D;
+    background-color: rgb(212, 135, 135);
     color: white;
   }
