--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,3 +24,9 @@
     background-color: rgb(212, 135, 135);
     color: white;
   }
+
+.form {
+    width: 100%;
+  padding: 20px;
+  margin: 10px auto;
+}
