--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,3 +30,10 @@
   padding: 20px;
   margin: 10px auto;
 }
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0px;
+}
+
