--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,13 @@
 * {
     background-color: rgb(241, 219, 190);
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    
+}
+
+body {
+    padding-top: 40px;
 }
 
 /* Style the links inside the navigation bar */
@@ -29,11 +37,8 @@
     width: 100%;
   padding: 20px;
   margin: 10px auto;
+
 }
 
-.form-container {
-    display: flex;
-    flex-direction: column;
-    margin: 20px 0px;
-}
+
 
